--- a/locale/es_ES/currencies.xml
+++ b/locale/es_ES/currencies.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
+0?xml version="1.0" encoding="UTF-8"?>
 
 <!--
   * currencies.xml
   *
-  * Copyright (c) 2003-2008 John Willinsky
+  * Copyright (c) 2000-2008 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Currencies data XML file. Based on ISO 4217.
