--- a/locale/en_US/common.xml
+++ b/locale/en_US/common.xml
@@ -83,6 +83,7 @@
 	<message key="common.error.framesRequired"><![CDATA[This page requires frames. <a href="{$url}">Click here</a> for the non-frames version.]]></message>
 	<message key="common.event">Event</message>
 	<message key="common.export">Export</message>
+	<message key="common.re">Re:</message>
 	<message key="common.file">File</message>
 	<message key="common.fileName">File name</message>
 	<message key="common.fileSize">File size</message>
