--- a/locale/en_US/user.xml
+++ b/locale/en_US/user.xml
@@ -54,6 +54,7 @@
 	<message key="user.middleName">Middle name</message>
 	<message key="user.myAccount">My Account</message>
 	<message key="user.name">Name</message>
+	<message key="user.other">Other</message>
 	<message key="user.password">Password</message>
 	<message key="user.phone">Phone</message>
 	<message key="user.profile.changePasswordInstructions">Enter your current and new passwords below to change the password for your account.</message>
