--- a/locale/en_US/manager.xml
+++ b/locale/en_US/manager.xml
@@ -164,7 +164,7 @@
 	<message key="plugins.categories.importexport">Import/Export Plugins</message>
 	<message key="plugins.categories.paymethod.description">Payment Method plugins implement support for various ways of processing payments online.</message>
 	<message key="plugins.categories.paymethod">Payment Plugins</message>
-	<message key="plugins.categories.reports.description">Report Plugins are used to implement various types of reports and data extracts for Conference Managers.</message>
+	<message key="plugins.categories.reports.description">Report Plugins are used to implement various types of reports and data extracts.</message>
 	<message key="plugins.categories.reports">Report Plugins</message>
 	<message key="plugins.categories.themes.description">Theme Plugins can be used to change the system's appearance.</message>
 	<message key="plugins.categories.themes">Theme Plugins</message>
