--- a/locale/de_DE/countries.xml
+++ b/locale/de_DE/countries.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+	
 <!--
   * countries.xml
   *
-  * Copyright (c) 2000-2009 John Willinsky
+  * Copyright (c) 2003-2009 John Willinsky
   * Weitergabe nach GNU GPL v2. Vollständiger Text s. docs/COPYING.
   *
   * Regionalisierte Länderliste.
@@ -18,7 +18,7 @@
 			code CDATA #REQUIRED
 			name CDATA #REQUIRED>
 ]>
-
+	
 <countries>
 	<country name="Afghanistan" code="AF"/>
 	<country name="Åland Inseln" code="AX"/>
@@ -77,7 +77,7 @@
 	<country name="Kroatien" code="HR"/>
 	<country name="Kuba" code="CU"/>
 	<country name="Zypern" code="CY"/>
-	<country name="Tchechische Republik" code="CZ"/>
+	<country name="Tschechische Republik" code="CZ"/>
 	<country name="Dänemark" code="DK"/>
 	<country name="Dschibuti" code="DJ"/>
 	<country name="Dominika" code="DM"/>
@@ -245,7 +245,7 @@
 	<country name="Uganda" code="UG"/>
 	<country name="Ukraine" code="UA"/>
 	<country name="Vereinigte Arabische Emirate" code="AE"/>
-	<country name="Vereinigtes Königreich" code="GB"/>
+	<country name="Großbritannien" code="GB"/>
 	<country name="Vereinigte Staaten" code="US"/>
 	<country name="Vereinigte Staaten kleinere äussere Inseln" code="UM"/>
 	<country name="Uruguay" code="UY"/>
