--- a/locale/da_DK/currencies.xml
+++ b/locale/da_DK/currencies.xml
@@ -24,7 +24,7 @@
 			name CDATA #REQUIRED>
 ]>
 
-<currencies locale="en_US">
+<currencies locale="da_DK">
 	<currency name="United Arab Emirates dirham" code_alpha="AED" code_numeric="784" />
 	<currency name="Afghani" code_alpha="AFN" code_numeric="971" />
 	<currency name="Lek" code_alpha="ALL" code_numeric="008" />
