--- a/locale/cs_CZ/countries.xml
+++ b/locale/cs_CZ/countries.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+<!DOCTYPE countries SYSTEM "../../dtd/countries.dtd">
 <!--
   * locale/cs_CZ/countries.xml
   *
@@ -12,15 +12,6 @@
   *
   * $Id$
   -->
-
-<!DOCTYPE countries [
-	<!ELEMENT countries (country+)>
-	<!ELEMENT country EMPTY>
-		<!ATTLIST country
-			code CDATA #REQUIRED
-			name CDATA #REQUIRED>
-]>
-	
 <countries>
 	<country name="Afghánistán" code="AF"/>
 	<country name="Aalandské ostrovy" code="AX"/>
