--- a/locale/da_DK/countries.xml
+++ b/locale/da_DK/countries.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-	
+<!DOCTYPE countries SYSTEM "../../dtd/countries.dtd">
 <!--
   * locale/da_DK/countries.xml
   *
@@ -10,15 +10,6 @@
   *
   * $Id$
   -->
-
-<!DOCTYPE countries [
-	<!ELEMENT countries (country+)>
-	<!ELEMENT country EMPTY>
-		<!ATTLIST country
-			code CDATA #REQUIRED
-			name CDATA #REQUIRED>
-]>
-	
 <countries>
 	<country name="Afghanistan" code="AF"/>
 	<country name="Ålandsøerne" code="AX"/>
